# petal-app

./: .gitignore  README.md  create-release.ps1  main.py  pyproject.toml
src/cycle_tracker/: __init__.py  __main__.py  cycle_stats.py  db.py  seed.py  theme.py  ui.py  widgets.py
src/petal/: __init__.py  __main__.py  cycle_stats.py  db.py  models.py  theme.py  ui.py  widgets.py
