[project]
name = "cycle-tracker"
version = "1.0.0"
description = "Period / cycle tracking app (Flet + SQLite)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet[all]>=0.28,<0.29",
]

[project.scripts]
cycle-tracker = "cycle_tracker.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cycle_tracker"]

# Flet packaging metadata (used by `flet build`)
[tool.flet]
org = "za.co.durbanoverall"
product = "Cycle Tracker"
company = "Durban Overall"
