[project]
name = "petal"
version = "3.0.3"
description = "Petal — a period / cycle tracking app (Flet + SQLite)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet[all]>=0.85,<0.86",
]

[project.scripts]
petal = "petal.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petal"]

# Flet packaging metadata (used by `flet build`)
[tool.flet]
org = "za.co.durbanoverall"
product = "Petal"
company = "Durban Overall"
